fix line throwing when null stations/times